--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -139,3 +139,20 @@ stages:
           fi
           
           echo "All resources deployed successfully!"
+    
+    - task: Bash@3
+      displayName: 'Wait 30 seconds before destroying resources'
+      inputs:
+        targetType: 'inline'
+        script: |
+          echo "Resources created successfully! Waiting 30 seconds before destroying..."
+          sleep 30
+          echo "Wait complete. Proceeding with resource destruction..."
+    
+    - task: TerraformTaskV4@4
+      displayName: 'Terraform Destroy'
+      inputs:
+        provider: 'azurerm'
+        command: 'destroy'
+        environmentServiceNameAzureRM: 'Azure-Service-Connection'
+        commandOptions: '-auto-approve -var="prefix=$(resourcePrefix)-$(environment)" -var="common_tags={\"environment\":\"$(environment)\",\"project\":\"MicroserviceApp\"}"'
