--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -147,7 +147,7 @@ stages:
         script: |
           echo "Resources created successfully! Waiting 30 seconds before destroying..."
           sleep 30
-          echo "Wait complete. Proceeding with resource destruction..."
+          echo "Wait complete. Proceeding with resource destruction tsest..."
     
     - task: TerraformTaskV4@4
       displayName: 'Terraform Destroy'
